✨ обавлено поле has_physical_card, исправлена аватарка в поиске, соцсети в футере в ряд

--- a/IESA_ROOT/templates/base.html
+++ b/IESA_ROOT/templates/base.html
@@ -191,7 +191,7 @@
                 </div>
                 <div class="col-12 col-md-3">
                     <h6 class="footer-title">Social</h6>
-                    <div class="d-flex flex-wrap gap-2">
+                    <div class="d-flex flex-row flex-wrap gap-2">
                         <a class="footer-social" href="https://facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
                         <a class="footer-social" href="https://www.linkedin.com" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
                         <a class="footer-social" href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
